[package]
name = "simple_web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "2.1.2"


[lib]
#crate-type = ["staticlib"]
# use the simple_link-rs project to package multi crates into one static lib

[build-dependencies]
cbindgen = "0.26.0"